--- a/DemoProjectCore/Views/Shared/_Layout.cshtml
+++ b/DemoProjectCore/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/Site.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
