--- a/DemoProjectCore/Views/Home/Login.cshtml
+++ b/DemoProjectCore/Views/Home/Login.cshtml
@@ -2,28 +2,30 @@
 
 @{
     ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
-<h2>Welcome to Login_Page</h2>
+<h2 class="text-center">Welcome to Login_Page</h2>
+<p class="text-center">New User? <a href="/Home/UserRegistration" class="text-primary">Register Account</a></p>
 <hr />
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal mb-30">
+    <div class="form-horizontal md-40">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-5" })
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.EmailId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3 input-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-5" })
+            <div class="col-md-2 input-group">
                 <div class="input-group">
                     @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                     <span class="input-group-addon">
@@ -34,14 +36,14 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+        <div class="form-group text-center">
+            <div class="col-md-offset-2 col-md-7">
                 <input type="submit" value="Login" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back", "Login")
-</div>
+</div>*@
