--- a/DemoProjectCore/Views/Home/UserRegistration.cshtml
+++ b/DemoProjectCore/Views/Home/UserRegistration.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "UserRegistration";
+    Layout = "~/Views/Shared/_RegistrationLayout.cshtml";
+
 }
 
 <h2>NewUserRegistration</h2>
@@ -47,7 +49,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3 input-group">
+            <div class="col-md-2 input-group">
                 <div class="input-group">
                     @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                     <span class="input-group-addon">
@@ -60,7 +62,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Confirm_Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3 input-group">
+            <div class="col-md-2 input-group">
                 <div class="input-group">
                     @Html.EditorFor(model => model.Confirm_Password, new { htmlAttributes = new { @class = "form-control" } })
                     <span class="input-group-addon">
@@ -77,12 +79,12 @@
             </div>
             <div class="col-md-offset-2">
                 <p class="alert-success">@ViewBag.Success</p>
-                <p class="alert-danger">@ViewBag.Warning</p>
+                <p class="alert-warning">@ViewBag.Warning</p>
             </div>
         </div>
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back", "Index")
-</div>
+</div>*@
