--- a/DemoProjectCore/Views/Shared/_Layout.cshtml
+++ b/DemoProjectCore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="text-center">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
